Enhance loader styling by adding z-index for improved visibility

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
     <main>
       <div
         id="loader"
-        class="position-absolute top-50 start-50 translate-middle"
+        class="position-absolute top-50 start-50 translate-middle z-3"
       >
         <div class="spinner-border text-primary" role="status">
           <span class="visually-hidden">Loading...</span>
