--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="detail.html">Profile</a>
+                <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Login</a>
