--- a/src/detail.html
+++ b/src/detail.html
@@ -62,7 +62,7 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <section class="container-fluid mt-2 mb-5">
+      <section class="container-fluid mt-2 mb-5 product-section">
         <div class="d-flex">
           <div class="container-fluid d-inline-flex flex-column ms-5">
             <div class="card-detail mb-3">
