--- a/src/profile.html
+++ b/src/profile.html
@@ -8,6 +8,7 @@
     <script type="module" src="js/index.mjs"></script>
     <title>User Profile | Tradeauction</title>
   </head>
+
   <body>
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg">
@@ -62,26 +63,322 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <section class="container-fluid mt-2 mb-5">
-        <div class="container-fluid d-flex">
-          <div class="card mb-3" style="max-width: 540px">
+      <section class="container mt-3 mb-5">
+        <div class="container-fluid d-flex flex-column">
+          <h1 class="m-5 ms-0">Profile</h1>
+          <div class="card-profile mb-3 rounded-3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="..." class="img-fluid rounded-start" alt="..." />
+                <img
+                  src="img/namibia-5087365_1280.jpg"
+                  class="img-fluid rounded-start"
+                  alt="Profile banner image"
+                />
+              </div>
+              <div class="position-absolute p-2">
+                <img
+                  src="img/fashion-9464657_1280.jpg"
+                  class="rounded-circle card-profile-img border border-primary"
+                  alt="Profile image"
+                />
               </div>
               <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-body-secondary"
-                      >Last updated 3 mins ago</small
+                <div class="card-body p-3">
+                  <div class="container-fluid d-flex">
+                    <div class="container-fluid d-flex flex-column mb-4">
+                      <h2 class="card-title">Username</h2>
+                      <small class="text-body-secondary"
+                        >username@stud.noroff.no</small
+                      >
+                    </div>
+                    <div
+                      class="container-fluid d-flex flex-column align-items-end gap-3"
                     >
+                      <i class="text-nowrap">1000 Credits</i>
+                      <i class="bi bi-pencil"></i>
+                    </div>
+                  </div>
+                  <p class="card-text ps-4 w-50">
+                    This is my bio. I am a student at Noroff and I am learning
+                    how to build websites.
                   </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid p-0">
+            <div class="container-fluid d-flex p-0">
+              <div class="container-fluid bid-history-list p-0 pe-5">
+                <h2 class="m-5 ms-0">My Bids</h2>
+                <div class="bid-history-list-body p-3 pb-1 rounded-3">
+                  <ul class="p-0">
+                    <li class="d-flex justify-content-between">
+                      <div class="bid-list-name flex-grow-1 mb-1">
+                        Product name
+                      </div>
+                      <div class="bid-list-date flex-grow-1 text-center">
+                        Mars 26.2025
+                      </div>
+                      <div class="bid-list-amount flex-grow-1 text-end">
+                        5 Credits
+                      </div>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <div class="bid-list-name flex-grow-1 mb-1">
+                        Product name
+                      </div>
+                      <div class="bid-list-date flex-grow-1 text-center">
+                        Mars 26.2025
+                      </div>
+                      <div class="bid-list-amount flex-grow-1 text-end">
+                        5 Credits
+                      </div>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <div class="bid-list-name flex-grow-1 mb-1">
+                        Product name
+                      </div>
+                      <div class="bid-list-date flex-grow-1 text-center">
+                        Mars 26.2025
+                      </div>
+                      <div class="bid-list-amount flex-grow-1 text-end">
+                        5 Credits
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="container-fluid bid-history-list ps-5 pe-0">
+                <h2 class="m-5 ms-0">Bids Won</h2>
+                <div class="bid-history-list-body p-3 pb-1 rounded-3">
+                  <ul class="p-0">
+                    <li class="d-flex justify-content-between">
+                      <div class="bid-list-name flex-grow-1 mb-1">
+                        Product name
+                      </div>
+                      <div class="bid-list-date flex-grow-1 text-center">
+                        Mars 26.2025
+                      </div>
+                      <div class="bid-list-amount flex-grow-1 text-end">
+                        5 Credits
+                      </div>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <div class="bid-list-name flex-grow-1 mb-1">
+                        Product name
+                      </div>
+                      <div class="bid-list-date flex-grow-1 text-center">
+                        Mars 26.2025
+                      </div>
+                      <div class="bid-list-amount flex-grow-1 text-end">
+                        5 Credits
+                      </div>
+                    </li>
+                    <li class="d-flex justify-content-between">
+                      <div class="bid-list-name flex-grow-1">Product name</div>
+                      <div class="bid-list-date flex-grow-1 text-center">
+                        Mars 26.2025
+                      </div>
+                      <div class="bid-list-amount flex-grow-1 text-end">
+                        5 Credits
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="container-fluid mb-5 ps-0 pe-0">
+              <h2 class="m-5 ms-0">My Listings</h2>
+              <div class="row g-4">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                  <div class="card">
+                    <img
+                      src="img/sunflowers-1719119_640.jpg"
+                      class="card-img-top"
+                      alt="Flower Vase"
+                    />
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                        <div>
+                          <h2 class="card-title text-nowrap">Flower Vase</h2>
+                        </div>
+                        <div>
+                          <small class="text-nowrap">Posted Aug 03.2025</small>
+                        </div>
+                      </div>
+                      <i class="card-author">By <a href="#">Ola Nordmann</a></i>
+                      <div class="d-flex justify-content-between">
+                        <div class="mt-3">
+                          <div class="card-body-bid-info">
+                            Total Bids:<span>1</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Highest Bid:<span>10</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Ends at:<span>Mars 27.2025</span>
+                          </div>
+                        </div>
+                        <div class="mt-3"><i class="bi bi-pencil"></i></div>
+                      </div>
+                      <p class="card-text mt-4 mb-5">
+                        Beautiful flower vase with a unique design. Perfect for
+                        home decor.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                  <div class="card">
+                    <img
+                      src="img/sunflowers-1719119_640.jpg"
+                      class="card-img-top"
+                      alt="Flower Vase"
+                    />
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                        <div>
+                          <h2 class="card-title text-nowrap">Flower Vase</h2>
+                        </div>
+                        <div>
+                          <small class="text-nowrap">Posted Aug 03.2025</small>
+                        </div>
+                      </div>
+                      <i class="card-author">By <a href="#">Ola Nordmann</a></i>
+                      <div class="d-flex justify-content-between">
+                        <div class="mt-3">
+                          <div class="card-body-bid-info">
+                            Total Bids:<span>1</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Highest Bid:<span>10</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Ends at:<span>Mars 27.2025</span>
+                          </div>
+                        </div>
+                        <div class="mt-3"><i class="bi bi-pencil"></i></div>
+                      </div>
+                      <p class="card-text mt-4 mb-5">
+                        Beautiful flower vase with a unique design. Perfect for
+                        home decor.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                  <div class="card">
+                    <img
+                      src="img/sunflowers-1719119_640.jpg"
+                      class="card-img-top"
+                      alt="Flower Vase"
+                    />
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                        <div>
+                          <h2 class="card-title text-nowrap">Flower Vase</h2>
+                        </div>
+                        <div>
+                          <small class="text-nowrap">Posted Aug 03.2025</small>
+                        </div>
+                      </div>
+                      <i class="card-author">By <a href="#">Ola Nordmann</a></i>
+                      <div class="d-flex justify-content-between">
+                        <div class="mt-3">
+                          <div class="card-body-bid-info">
+                            Total Bids:<span>1</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Highest Bid:<span>10</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Ends at:<span>Mars 27.2025</span>
+                          </div>
+                        </div>
+                        <div class="mt-3"><i class="bi bi-pencil"></i></div>
+                      </div>
+                      <p class="card-text mt-4 mb-5">
+                        Beautiful flower vase with a unique design. Perfect for
+                        home decor.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                  <div class="card">
+                    <img
+                      src="img/sunflowers-1719119_640.jpg"
+                      class="card-img-top"
+                      alt="Flower Vase"
+                    />
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                        <div>
+                          <h2 class="card-title text-nowrap">Flower Vase</h2>
+                        </div>
+                        <div>
+                          <small class="text-nowrap">Posted Aug 03.2025</small>
+                        </div>
+                      </div>
+                      <i class="card-author">By <a href="#">Ola Nordmann</a></i>
+                      <div class="d-flex justify-content-between">
+                        <div class="mt-3">
+                          <div class="card-body-bid-info">
+                            Total Bids:<span>1</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Highest Bid:<span>10</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Ends at:<span>Mars 27.2025</span>
+                          </div>
+                        </div>
+                        <div class="mt-3"><i class="bi bi-pencil"></i></div>
+                      </div>
+                      <p class="card-text mt-4 mb-5">
+                        Beautiful flower vase with a unique design. Perfect for
+                        home decor.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                  <div class="card">
+                    <img
+                      src="img/sunflowers-1719119_640.jpg"
+                      class="card-img-top"
+                      alt="Flower Vase"
+                    />
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                        <div>
+                          <h2 class="card-title text-nowrap">Flower Vase</h2>
+                        </div>
+                        <div>
+                          <small class="text-nowrap">Posted Aug 03.2025</small>
+                        </div>
+                      </div>
+                      <i class="card-author">By <a href="#">Ola Nordmann</a></i>
+                      <div class="d-flex justify-content-between">
+                        <div class="mt-3">
+                          <div class="card-body-bid-info">
+                            Total Bids:<span>1</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Highest Bid:<span>10</span>
+                          </div>
+                          <div class="card-body-bid-info">
+                            Ends at:<span>Mars 27.2025</span>
+                          </div>
+                        </div>
+                        <div class="mt-3"><i class="bi bi-pencil"></i></div>
+                      </div>
+                      <p class="card-text mt-4 mb-5">
+                        Beautiful flower vase with a unique design. Perfect for
+                        home decor.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -90,7 +387,7 @@
       </section>
     </main>
     <footer>
-      <div class="container-fluid bg-primary fixed-bottom">
+      <div class="container-fluid bg-primary sticky-bottom">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
     </footer>
