--- a/src/index.html
+++ b/src/index.html
@@ -613,7 +613,7 @@
       </section>
     </main>
     <footer>
-      <div class="container-fluid bg-primary">
+      <div class="container-fluid bg-primary sticky-bottom">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
     </footer>
