--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tradeauction is a auction website" />
     <meta name="keywords" content="auction, trade, buy, sell" />
-    <script type="module" src="js/index.mjs"></script>
+    <script type="module" src="./js/index.mjs"></script>
     <title>Listings | Tradeauction</title>
   </head>
 
