--- a/src/detail.html
+++ b/src/detail.html
@@ -12,7 +12,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand position-absolute" href="index.html">
+          <a class="navbar-brand" href="index.html">
             <img
               src="img/logo.png"
               alt="Logo"
