--- a/src/header_template.html
+++ b/src/header_template.html
@@ -12,7 +12,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand position-absolute" href="#">
+          <a class="navbar-brand" href="#">
             <img
               src="img/logo.png"
               alt="Logo"
