Add required attributes to search and bid input fields for improved form validation

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,8 @@
               type="search"
               placeholder="Search"
               aria-label="Search"
+              name="search"
+              required
             />
             <button
               class="btn btn-outline-success me-2 custom-search-button"
@@ -79,6 +81,7 @@
               type="search"
               placeholder="Filter By Tags(comma separated)"
               aria-label="Filter"
+              name="filter-tags"
             />
           </div>
         </form>
@@ -191,6 +194,8 @@
                       class="form-control"
                       placeholder="Enter your bid"
                       aria-label="Bid Amount"
+                      name="bid-amount"
+                      required
                     />
                     <button
                       class="btn btn-secondary"
@@ -273,6 +278,8 @@
                       class="form-control"
                       placeholder="Enter your bid"
                       aria-label="Bid Amount"
+                      name="bid-amount"
+                      required
                     />
                     <button
                       class="btn btn-secondary"
@@ -355,6 +362,8 @@
                       class="form-control"
                       placeholder="Enter your bid"
                       aria-label="Bid Amount"
+                      name="bid-amount"
+                      required
                     />
                     <button
                       class="btn btn-secondary"
@@ -437,6 +446,8 @@
                       class="form-control"
                       placeholder="Enter your bid"
                       aria-label="Bid Amount"
+                      name="bid-amount"
+                      required
                     />
                     <button
                       class="btn btn-secondary"
@@ -519,6 +530,8 @@
                       class="form-control"
                       placeholder="Enter your bid"
                       aria-label="Bid Amount"
+                      name="bid-amount"
+                      required
                     />
                     <button
                       class="btn btn-secondary"
@@ -601,6 +614,8 @@
                       class="form-control"
                       placeholder="Enter your bid"
                       aria-label="Bid Amount"
+                      name="bid-amount"
+                      required
                     />
                     <button
                       class="btn btn-secondary"
