Fix email input ID and label for consistency; update navbar-brand position for responsive design

--- a/src/authorization.html
+++ b/src/authorization.html
@@ -69,12 +69,13 @@
                     <input
                       type="email"
                       class="form-control"
-                      id="Email"
+                      id="email"
                       placeholder="name@example.com"
                       aria-describedby="emailHelp"
+                      autocomplete="email"
                       required
                     />
-                    <label for="Email" class="form-label">Email</label>
+                    <label for="email" class="form-label">Email</label>
                     <div class="invalid-feedback">
                       Please enter a valid email address
                     </div>
