Fix build script path for PostCSS and add responsive styles for bids container

--- a/src/profile.html
+++ b/src/profile.html
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="container-fluid p-0">
-            <div class="container-fluid d-flex p-0">
+            <div class="container-fluid d-flex p-0 bids-container">
               <div class="container-fluid bid-history-list p-0 pe-5">
                 <h2 class="m-5 ms-0">My Bids</h2>
                 <div class="bid-history-list-body p-3 pb-1 rounded-3">
