Update padding for bid history list on profile page for improved layout

--- a/src/profile.html
+++ b/src/profile.html
@@ -148,7 +148,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="container-fluid bid-history-list ps-5 pe-0">
+              <div class="container-fluid bid-history-list p-0 ps-md-5 pe-0">
                 <h2 class="m-5 ms-0">Bids Won</h2>
                 <div class="bid-history-list-body p-3 pb-1 rounded-3">
                   <ul class="p-0">
