--- a/src/profile.html
+++ b/src/profile.html
@@ -83,8 +83,8 @@
                 />
               </div>
               <div class="col-md-8">
-                <div class="card-body p-3">
-                  <div class="container-fluid d-flex">
+                <div class="card-body p-md-3 pb-4 pt-4">
+                  <div class="container-fluid d-flex ps-0">
                     <div class="container-fluid d-flex flex-column mb-4">
                       <h2 class="card-title">Username</h2>
                       <small class="text-body-secondary"
@@ -98,7 +98,7 @@
                       <i class="bi bi-pencil"></i>
                     </div>
                   </div>
-                  <p class="card-text ps-4 w-50">
+                  <p class="card-text ps-3 w-50">
                     This is my bio. I am a student at Noroff and I am learning
                     how to build websites.
                   </p>
@@ -108,7 +108,7 @@
           </div>
           <div class="container-fluid p-0">
             <div class="container-fluid d-flex p-0 bids-container">
-              <div class="container-fluid bid-history-list p-0 pe-5">
+              <div class="container-fluid bid-history-list p-0 pe-md-5">
                 <h2 class="m-5 ms-0">My Bids</h2>
                 <div class="bid-history-list-body p-3 pb-1 rounded-3">
                   <ul class="p-0">
