Update authorization page layout and enhance card body styling for consistency

--- a/src/authorization.html
+++ b/src/authorization.html
@@ -63,7 +63,7 @@
                   novalidate
                 >
                   <h2 class="fw-semibold">
-                    <p class="h1">Sign in to your account</p>
+                    <p class="h1 text-center">Login</p>
                   </h2>
                   <div class="form-floating mb-3">
                     <input
@@ -94,21 +94,6 @@
                       Please enter your password with at least 8 characters
                     </div>
                   </div>
-                  <div class="form-check-container d-flex">
-                    <div class="mb-3 form-check">
-                      <input
-                        type="checkbox"
-                        class="form-check-input"
-                        id="rememberme"
-                      />
-                      <label class="form-check-label" for="rememberme"
-                        >Remember me</label
-                      >
-                    </div>
-                    <div class="mb-3 ms-3">
-                      <a href="#" class="btn-link">Forgot password?</a>
-                    </div>
-                  </div>
                   <div class="mb-3">
                     <button
                       type="submit"
@@ -118,14 +103,18 @@
                       Sign in
                     </button>
                   </div>
-                  <div class="mb-3">
-                    <p>Don’t have an account yet?</p>
-                    <a
-                      href="profile/index.html"
-                      class="btn-link"
-                      id="signUpLink"
-                      >Sign up</a
-                    >
+                  <div class="d-flex flex-column align-items-center mb-3">
+                    <div>
+                      <p class="">Don’t have an account yet?</p>
+                    </div>
+                    <div>
+                      <a
+                        href="profile/index.html"
+                        class="btn-link"
+                        id="signUpLink"
+                        >Sign up</a
+                      >
+                    </div>
                   </div>
                 </form>
               </div>
@@ -144,7 +133,7 @@
                   novalidate
                 >
                   <h2 class="fw-semibold">
-                    <p class="h1">Create your account</p>
+                    <p class="h1 text-center">Create your account</p>
                   </h2>
                   <div class="form-floating mb-3">
                     <input
@@ -215,9 +204,13 @@
                       Sign Up
                     </button>
                   </div>
-                  <div class="mb-3">
-                    <p>Already have an account?</p>
-                    <a href="#" class="btn-link" id="signInLink">Sign in</a>
+                  <div class="d-flex flex-column align-items-center mb-3">
+                    <div>
+                      <p>Already have an account?</p>
+                    </div>
+                    <div>
+                      <a href="#" class="btn-link" id="signInLink">Sign in</a>
+                    </div>
                   </div>
                 </form>
               </div>
