Enhance authorization layout by adding auth-section class and setting height for improved styling

--- a/src/authorization.html
+++ b/src/authorization.html
@@ -12,9 +12,11 @@
     <header></header>
     <main>
       <h1 class="text-center">Welcome to Tradeauction</h1>
-      <section class="container-fluid d-flex justify-content-center">
+      <section
+        class="container-fluid d-flex justify-content-center auth-section"
+      >
         <div
-          class="card bg-white rounded-3 flex-grow-1 flex-sm-grow-0 card-custom"
+          class="card bg-white rounded-3 flex-grow-1 flex-sm-grow-0 align-self-center card-custom"
         >
           <div class="card-body">
             <!-- Nav tabs -->
