--- a/src/profile.html
+++ b/src/profile.html
@@ -44,7 +44,7 @@
                 <a class="nav-link active" href="#">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Login</a>
+                <a class="nav-link" href="authorization.html">Login</a>
               </li>
             </ul>
           </div>
