Refactor build script paths, enhance navbar styling, and update card background variables for consistency

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
@@ -101,10 +101,10 @@
           <div class="container-fluid d-flex mb-3">
             <h1 class="text-center mt-5 ms-0">Listings</h1>
           </div>
-          <div class="container-fluid d-flex gap-5 align-items-center">
+          <div class="container-fluid d-flex gap-4 align-items-center">
             <div>
               <a
-                class="btn btn-primary add-listing-button"
+                class="btn btn-primary text-nowrap add-listing-button"
                 href="#"
                 role="button"
                 ><i class="bi bi-plus"></i>Add Listing</a
@@ -118,14 +118,18 @@
                 id="switchCheckChecked"
                 checked
               />
-              <label class="form-check-label" for="switchCheckChecked"
+              <label
+                class="form-check-label text-nowrap"
+                for="switchCheckChecked"
                 >Show Active Only</label
               >
             </div>
           </div>
         </div>
-        <div class="row g-4">
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+        <div
+          class="row row-cols-auto justify-content-center justify-content-md-start g-4"
+        >
+          <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -198,7 +202,7 @@
                       required
                     />
                     <button
-                      class="btn btn-secondary"
+                      class="btn btn-secondary place-bid-button"
                       type="submit"
                       title="Submit Bid"
                     >
@@ -209,7 +213,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+          <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -282,7 +286,7 @@
                       required
                     />
                     <button
-                      class="btn btn-secondary"
+                      class="btn btn-secondary place-bid-button"
                       type="submit"
                       title="Submit Bid"
                     >
@@ -293,7 +297,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+          <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -366,7 +370,7 @@
                       required
                     />
                     <button
-                      class="btn btn-secondary"
+                      class="btn btn-secondary place-bid-button"
                       type="submit"
                       title="Submit Bid"
                     >
@@ -377,7 +381,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+          <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -450,7 +454,7 @@
                       required
                     />
                     <button
-                      class="btn btn-secondary"
+                      class="btn btn-secondary place-bid-button"
                       type="submit"
                       title="Submit Bid"
                     >
@@ -461,7 +465,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+          <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -534,7 +538,7 @@
                       required
                     />
                     <button
-                      class="btn btn-secondary"
+                      class="btn btn-secondary place-bid-button"
                       type="submit"
                       title="Submit Bid"
                     >
@@ -545,7 +549,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+          <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card">
               <img
                 src="img/sunflowers-1719119_640.jpg"
@@ -618,7 +622,7 @@
                       required
                     />
                     <button
-                      class="btn btn-secondary"
+                      class="btn btn-secondary place-bid-button"
                       type="submit"
                       title="Submit Bid"
                     >
