--- a/src/detail.html
+++ b/src/detail.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
