--- a/src/profile.html
+++ b/src/profile.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="sticky-top">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img
