Refactor footer styles for consistency, remove unused header template, and enhance search functionality in index page

--- a/src/template.html
+++ b/src/template.html
@@ -89,7 +89,7 @@
       </div>
     </main>
     <footer>
-      <div class="container-fluid bg-primary">
+      <div class="container-fluid sticky-bottom">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
     </footer>
