--- a/src/detail.html
+++ b/src/detail.html
@@ -160,7 +160,7 @@
       </section>
     </main>
     <footer>
-      <div class="container-fluid bg-primary fixed-bottom">
+      <div class="container-fluid sticky-bottom">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
     </footer>
