--- a/src/profile.html
+++ b/src/profile.html
@@ -387,7 +387,7 @@
       </section>
     </main>
     <footer>
-      <div class="container-fluid bg-primary sticky-bottom">
+      <div class="container-fluid sticky-bottom">
         <p class="text-light mt-3 p-3">Tradeauction &copy; 2025</p>
       </div>
     </footer>
