--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 mt-lg-4">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
@@ -50,7 +50,7 @@
                 >
               </li>
             </ul>
-            <div class="container-fluid w-50 pb-2 search-container">
+            <div class="container-fluid pb-2 search-container">
               <form class="d-flex" role="search">
                 <div class="input-group mb-3">
                   <input
