--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 mt-lg-4">
-              <li class="nav-item">
+              <li class="nav-item nav-border-custom">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
