chore: update profile listings layout for improved responsiveness and alignment

--- a/src/profile.html
+++ b/src/profile.html
@@ -189,8 +189,10 @@
             </div>
             <div class="container-fluid mb-5 ps-0 pe-0">
               <h2 class="m-5 ms-0">My Listings</h2>
-              <div class="row g-4">
-                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+              <div
+                class="row row-cols-auto justify-content-center justify-content-md-start g-4"
+              >
+                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -228,7 +230,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -266,7 +268,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -304,7 +306,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -342,7 +344,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
