chore: update button labels and improve navigation links in authorization and detail pages

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
           class="row row-cols-auto justify-content-center justify-content-md-start g-4"
         >
           <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
-            <div class="card">
+            <div class="card card-auction-item">
               <img
                 src="img/sunflowers-1719119_640.jpg"
                 class="card-img-top"
