--- a/src/authorization.html
+++ b/src/authorization.html
@@ -102,7 +102,7 @@
                       class="btn btn-custom w-100"
                       id="signInButton"
                     >
-                      Sign in
+                      Login
                     </button>
                   </div>
                   <div class="d-flex flex-column align-items-center mb-3">
@@ -110,12 +110,7 @@
                       <p class="">Don’t have an account yet?</p>
                     </div>
                     <div>
-                      <a
-                        href="profile/index.html"
-                        class="btn-link"
-                        id="signUpLink"
-                        >Sign up</a
-                      >
+                      <a class="btn-link" href="#" id="signUpLink">Sign Up</a>
                     </div>
                   </div>
                 </form>
