--- a/src/detail.html
+++ b/src/detail.html
@@ -121,7 +121,7 @@
                   />
                 </div>
                 <button
-                  class="btn btn-secondary w-100"
+                  class="btn btn-secondary place-bid-button w-100"
                   type="submit"
                   title="Submit Bid"
                 >
