--- a/src/detail.html
+++ b/src/detail.html
@@ -40,7 +40,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Profile</a>
+                <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="authorization.html">Login</a>
