chore: refactor item rendering logic and add createItemCard function for improved structure

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div
-          class="row row-cols-auto justify-content-center justify-content-md-start g-4"
+          class="row row-cols-auto justify-content-center justify-content-md-start g-4 items-container"
         >
           <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
             <div class="card card-auction-item">
@@ -142,12 +142,12 @@
                 Ends Aug 10.2025
               </div>
               <div class="card-body">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex flex-column justify-content-between">
                   <div>
-                    <h2 class="card-title text-nowrap">Flower Vase</h2>
+                    <h2 class="card-title">Flower Vase</h2>
                   </div>
                   <div>
-                    <small class="text-nowrap">Posted Aug 03.2025</small>
+                    <small>Posted Aug 03.2025</small>
                   </div>
                 </div>
                 <i class="card-author">By <a href="#">Ola Nordmann</a></i>
