--- a/src/detail.html
+++ b/src/detail.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="authorization.html">Login</a>
+                <a class="nav-link nav-auth" href="authorization.html">Login</a>
               </li>
             </ul>
           </div>
