--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="profile.html">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="authorization.html">Login</a>
+                <a class="nav-link nav-auth" href="authorization.html">Login</a>
               </li>
             </ul>
             <div class="container-fluid pb-2 search-container">
