chore: update card layout for responsiveness and improve styling in listings and profile pages

--- a/src/profile.html
+++ b/src/profile.html
@@ -192,7 +192,7 @@
               <div
                 class="row row-cols-auto justify-content-center justify-content-md-start g-4"
               >
-                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -230,7 +230,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -268,7 +268,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -306,7 +306,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
@@ -344,7 +344,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col col-sm-8 col-md-6 col-lg-4 col-xxl-3">
+                <div class="col col-md-6 col-lg-4 col-xxl-3">
                   <div class="card">
                     <img
                       src="img/sunflowers-1719119_640.jpg"
