--- a/src/profile.html
+++ b/src/profile.html
@@ -73,6 +73,7 @@
                   src="img/namibia-5087365_1280.jpg"
                   class="img-fluid rounded-start"
                   alt="Profile banner image"
+                  id="profile-cover"
                 />
               </div>
               <div class="position-absolute p-2">
@@ -80,16 +81,17 @@
                   src="img/fashion-9464657_1280.jpg"
                   class="rounded-circle card-profile-img border border-primary"
                   alt="Profile image"
+                  id="profile-image"
                 />
               </div>
               <div class="col-md-8">
                 <div class="card-body p-md-3 pb-4 pt-4">
                   <div class="container-fluid d-flex ps-0">
-                    <div class="container-fluid d-flex flex-column mb-4">
-                      <h2 class="card-title">Username</h2>
-                      <small class="text-body-secondary"
-                        >username@stud.noroff.no</small
-                      >
+                    <div
+                      class="container-fluid d-flex flex-column mb-4"
+                      id="profile-id"
+                    >
+                      <!-- Dynamic content will be inserted here -->
                     </div>
                     <div
                       class="container-fluid d-flex flex-column align-items-end gap-3"
@@ -98,7 +100,8 @@
                       <i class="bi bi-pencil"></i>
                     </div>
                   </div>
-                  <p class="card-text ps-3 w-50">
+                  <p class="card-text ps-3 w-50" id="profile-bio">
+                    <!-- Dynamic content will be inserted here -->
                     This is my bio. I am a student at Noroff and I am learning
                     how to build websites.
                   </p>
