--- a/src/profile.html
+++ b/src/profile.html
@@ -96,7 +96,7 @@
                     <div
                       class="container-fluid d-flex flex-column align-items-end gap-3"
                     >
-                      <i class="text-nowrap">1000 Credits</i>
+                      <i class="text-nowrap" id="profile-credits"></i>
                       <i class="bi bi-pencil"></i>
                     </div>
                   </div>
