--- a/src/profile.html
+++ b/src/profile.html
@@ -68,13 +68,8 @@
           <h1 class="m-5 ms-0">Profile</h1>
           <div class="card-profile mb-3 rounded-3">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img
-                  src="img/namibia-5087365_1280.jpg"
-                  class="img-fluid rounded-start"
-                  alt="Profile banner image"
-                  id="profile-cover"
-                />
+              <div class="col-md-4" id="profile-cover">
+                <!-- Dynamic content will be inserted here -->
               </div>
               <div class="position-absolute p-2">
                 <img
