--- a/src/profile.html
+++ b/src/profile.html
@@ -92,7 +92,14 @@
                       class="container-fluid d-flex flex-column align-items-end gap-3"
                     >
                       <i class="text-nowrap" id="profile-credits"></i>
-                      <i class="bi bi-pencil"></i>
+                      <button
+                        type="button"
+                        name="edit-profile"
+                        title="Edit Profile Picture"
+                        class="btn border rounded-circle d-flex justify-content-center"
+                      >
+                        <i class="bi bi-pencil"></i>
+                      </button>
                     </div>
                   </div>
                   <p class="card-text ps-3 w-50" id="profile-bio">
