chore: enhance profile editing by adding cover URL input and updating modal structure

--- a/src/profile.html
+++ b/src/profile.html
@@ -71,13 +71,8 @@
               <div class="col-md-4" id="profile-cover">
                 <!-- Dynamic content will be inserted here -->
               </div>
-              <div class="position-absolute p-2">
-                <img
-                  src="img/fashion-9464657_1280.jpg"
-                  class="rounded-circle card-profile-img border border-primary"
-                  alt="Profile image"
-                  id="profile-image"
-                />
+              <div class="position-absolute p-2" id="profile-image">
+                <!-- Dynamic content will be inserted here -->
               </div>
               <div class="col-md-8">
                 <div class="card-body p-md-3 pb-4 pt-4">
@@ -91,7 +86,9 @@
                     <div
                       class="container-fluid d-flex flex-column align-items-end gap-3"
                     >
-                      <i class="text-nowrap" id="profile-credits"></i>
+                      <i class="text-nowrap" id="profile-credits"
+                        ><!-- Dynamic content will be insterted here --></i
+                      >
                       <button
                         type="button"
                         name="edit-profile"
@@ -104,8 +101,6 @@
                   </div>
                   <p class="card-text ps-3 w-50" id="profile-bio">
                     <!-- Dynamic content will be inserted here -->
-                    This is my bio. I am a student at Noroff and I am learning
-                    how to build websites.
                   </p>
                 </div>
               </div>
